--- a/app/src/main/res/layout/activity_order_status.xml
+++ b/app/src/main/res/layout/activity_order_status.xml
@@ -139,7 +139,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="编号" />
+                            android:text="编号"
+                            android:textColor="@android:color/black" />
 
                         <View
                             android:layout_width="1dp"
@@ -151,7 +152,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="3"
                             android:gravity="center"
-                            android:text="品名" />
+                            android:text="品名"
+                            android:textColor="@android:color/black" />
 
                         <View
                             android:layout_width="1dp"
@@ -163,7 +165,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="价格" />
+                            android:text="价格"
+                            android:textColor="@android:color/black" />
 
                         <View
                             android:layout_width="1dp"
@@ -175,7 +178,8 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="center"
-                            android:text="数量" />
+                            android:text="数量"
+                            android:textColor="@android:color/black" />
 
                     </LinearLayout>
 
