--- a/app/src/main/res/layout/activity_order_detail2.xml
+++ b/app/src/main/res/layout/activity_order_detail2.xml
@@ -29,7 +29,7 @@
                     android:id="@+id/shipSn"
                     android:layout_width="0dp"
                     android:layout_height="40dp"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="center_vertical"
                     android:text="订单号"
                     android:textSize="15sp" />
@@ -66,17 +66,38 @@
                         android:layout_weight="3"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/storeName"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:text="发：山大北三店"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp" />
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/storeName"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="3"
+                                android:gravity="center_vertical"
+                                android:singleLine="true"
+                                android:text="发：山大北三店"
+                                android:textColor="@android:color/black"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:id="@+id/modify"
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center_vertical|center"
+                                android:singleLine="true"
+                                android:text="修改"
+                                android:textColor="@color/orange"
+                                android:textSize="18sp"
+                                android:visibility="gone" />
+                        </LinearLayout>
 
                         <TextView
+                            android:id="@+id/storeAddress"
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
                             android:layout_weight="1"
@@ -88,12 +109,13 @@
 
 
                     <Button
+                        android:id="@+id/connectStore"
                         android:layout_width="0dp"
                         android:layout_height="34dp"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:background="@drawable/bg_order"
-                        android:onClick="qiangdanClick"
+                        android:onClick="connectStoreClick"
                         android:text="联系门店"
                         android:textColor="@android:color/white"
                         android:textSize="16sp" />
@@ -125,11 +147,13 @@
                     </LinearLayout>
 
                     <Button
+                        android:id="@+id/connectUser"
                         android:layout_width="0dp"
                         android:layout_height="34dp"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:background="@drawable/bg_order"
+                        android:onClick="connectUserClick"
                         android:text="联系买家"
                         android:textColor="@android:color/white"
                         android:textSize="16sp" />
@@ -140,6 +164,68 @@
                     android:layout_width="match_parent"
                     android:layout_height="50dp">
 
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="10dp">
+
+                        <TextView
+                            android:id="@+id/distanceA"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="30dp"
+                            android:text="300米"
+                            android:textColor="@color/orange"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/distanceB"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+                            android:text="1500米"
+                            android:textColor="@color/orange"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center|bottom"
+                        android:layout_marginBottom="10dp">
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="@drawable/nin" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginTop="4dp"
+                            android:text="─────────" />
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="@drawable/fa" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_marginTop="4dp"
+                            android:text="─────────" />
+
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:background="@drawable/shou" />
+                    </LinearLayout>
                 </FrameLayout>
 
                 <!--分隔线-->
@@ -190,6 +276,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/amount"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_weight="1"
@@ -200,6 +287,7 @@
                     android:textSize="18sp" />
 
                 <TextView
+                    android:id="@+id/youhui"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_weight="1"
@@ -207,10 +295,11 @@
                     android:paddingLeft="10dp"
                     android:text="优惠金额："
                     android:textColor="@android:color/black"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:visibility="gone" />
 
                 <TextView
-                    android:id="@+id/amount"
+                    android:id="@+id/payed"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_weight="1"
@@ -351,6 +440,11 @@
                 android:background="@android:color/white"
                 android:orientation="vertical">
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/line" />
+
                 <LinearLayout
                     android:id="@+id/goods"
                     android:layout_width="match_parent"
@@ -413,6 +507,15 @@
                     android:background="@color/line" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/layoutOfOrderAndGoods"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:orientation="vertical">
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </ScrollView>
@@ -421,8 +524,7 @@
         android:id="@+id/isClickable"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:visibility="gone">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/customerReject"
