--- a/app/src/main/res/layout/activity_order_detail2.xml
+++ b/app/src/main/res/layout/activity_order_detail2.xml
@@ -228,6 +228,19 @@
                     </LinearLayout>
                 </FrameLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/reachTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/orange"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
                 <!--分隔线-->
                 <View
                     android:layout_width="match_parent"
