--- a/app/src/main/res/layout/activity_dialog2.xml
+++ b/app/src/main/res/layout/activity_dialog2.xml
@@ -7,10 +7,11 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/white"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/totalDistance"
@@ -31,9 +32,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:singleLine="true"
-            android:text=""
+            android:text="发"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -42,9 +44,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:paddingRight="10dp"
+            android:paddingRight="20dp"
             android:singleLine="true"
-            android:text=""
+            android:text="米"
             android:textColor="@color/orange"
             android:textSize="16sp" />
 
@@ -53,9 +55,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:paddingLeft="10dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:singleLine="true"
-            android:text=""
+            android:text="收"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -64,15 +67,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
-            android:paddingRight="10dp"
+            android:paddingRight="20dp"
             android:singleLine="true"
-            android:text=""
+            android:text="米"
             android:textColor="@color/orange"
             android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:layout_marginTop="30dp"
             android:gravity="center_horizontal|bottom"
             android:orientation="vertical"
@@ -122,6 +125,18 @@
                     android:text="拒单"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/know"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/bg_order"
+                    android:gravity="center"
+                    android:text="俺知道了"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
