--- a/app/src/main/res/layout/activity_dialog2.xml
+++ b/app/src/main/res/layout/activity_dialog2.xml
@@ -32,9 +32,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:maxLines="2"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:singleLine="true"
             android:text="发"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
@@ -55,9 +55,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            android:maxLines="2"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:singleLine="true"
             android:text="收"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
@@ -75,7 +75,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="160dp"
             android:layout_marginTop="30dp"
             android:gravity="center_horizontal|bottom"
             android:orientation="vertical"
@@ -133,7 +133,7 @@
                     android:layout_marginRight="20dp"
                     android:background="@drawable/bg_order"
                     android:gravity="center"
-                    android:text="俺知道了"
+                    android:text="朕已知晓"
                     android:textColor="@android:color/white"
                     android:textSize="16sp"
                     android:visibility="gone" />
