--- a/app/src/main/res/layout/activity_dialog2.xml
+++ b/app/src/main/res/layout/activity_dialog2.xml
@@ -79,7 +79,7 @@
             android:layout_marginTop="30dp"
             android:gravity="center_horizontal|bottom"
             android:orientation="vertical"
-            android:paddingBottom="20dp">
+            android:paddingBottom="0dp">
 
             <LinearLayout
                 android:id="@+id/accept"
@@ -99,7 +99,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
