加入下拉刷新，退出提示，完成配送和客户拒单设置不可点击多次，默认接单状态下如果订单异常不销毁界面

--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -191,10 +191,18 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listView"
+    <!--下拉刷新控件-->
+    <com.sypm.shuyuzhongbao.utils.RefreshableView
+        android:id="@+id/refreshable_view"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="300dp">
+
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="300dp" />
+    </com.sypm.shuyuzhongbao.utils.RefreshableView>
+
 
     <LinearLayout
         android:layout_width="match_parent"
